applied proper fix for Defect 658, IE overlapping link issue

--- a/node-app/src/views/core/components/content/link-list/style.scss
+++ b/node-app/src/views/core/components/content/link-list/style.scss
@@ -175,5 +175,20 @@
         }
     }
 }
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    //interent explorer 
+    .editorial-nav-desktop-wrapper{
+        .links{
+            .list-div{
+                .ui{
+                    .li{
+                        display:table-cell;
+                        vertical-align:middle;
+                    }
+                }
+            }
+        }
+    }
+    }
 
 
